cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_03347_nsolid-console-nlb.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "N|Solid Console in AWS with Network Load Balancer",
  "Mappings": {
    "ConsoleAMI": {
      "us-east-1": {
        "AMI": "ami-02e98e17c21ee1e35"
      },
      "us-east-2": {
        "AMI": "ami-0a3d689021681e370"
      },
      "us-west-1": {
        "AMI": "ami-00a3fac8781b11843"
      },
      "us-west-2": {
        "AMI": "ami-0c7a54f665f112622"
      },
      "ca-central-1": {
        "AMI": "ami-07c38839a5dd70c7b"
      },
      "eu-central-1": {
        "AMI": "ami-07f670eb80213ba08"
      },
      "eu-west-1": {
        "AMI": "ami-0c80733f349443f83"
      },
      "eu-west-2": {
        "AMI": "ami-0136e5c1998e102e8"
      },
      "eu-west-3": {
        "AMI": "ami-057987214af936c8a"
      },
      "ap-northeast-1": {
        "AMI": "ami-088bb0e40cb24a59b"
      },
      "ap-northeast-2": {
        "AMI": "ami-06d5f0d8acbff3173"
      },
      "ap-southeast-1": {
        "AMI": "ami-0857b458ba8c9b98b"
      },
      "ap-southeast-2": {
        "AMI": "ami-08bb3e35f0111c81c"
      },
      "ap-south-1": {
        "AMI": "ami-02c592c0327860a74"
      },
      "sa-east-1": {
        "AMI": "ami-06f5e88e73ddd0fda"
      }
    }
  },
  "Parameters": {
    "SSHKey": {
      "Description": "Amazon EC2 Key Pair",
      "Type": "AWS::EC2::KeyPair::KeyName"
    },
    "ConsoleSubnet": {
      "Description": "Subnet ID to run N|Solid Console in",
      "Type": "AWS::EC2::Subnet::Id"
    },
    "LoadBalancerSubnets": {
      "Description": "Subnet IDs for the Load Balancer",
      "Type": "List<AWS::EC2::Subnet::Id>"
    },
    "VPC": {
      "Description": "VPC ID to run N|Solid Console in",
      "Type": "AWS::EC2::VPC::Id"
    }
  },
  "Resources": {
    "ConsoleSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupName": "NSolid-Console",
        "GroupDescription": "Security Group for NSolid Console Instance",
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22"
          },
          {
            "CidrIp": "0.0.0.0/0",
            "IpProtocol": "tcp",
            "FromPort": "80",
            "ToPort": "80"
          },
          {
            "CidrIp": "0.0.0.0/0",
            "IpProtocol": "tcp",
            "FromPort": "9001",
            "ToPort": "9003"
          }
        ],
        "VpcId": {
          "Ref": "VPC"
        }
      }
    },
    "LoadBalancer": {
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
      "Properties": {
        "Name": "NSolid-Console",
        "Scheme": "internet-facing",
        "Subnets": {
          "Ref": "LoadBalancerSubnets"
        },
        "Type": "network"
      }
    },
    "TargetGroup80": {
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
      "Properties": {
        "Name": "nsolid-console-80",
        "HealthCheckIntervalSeconds": 10,
        "HealthCheckPort": 80,
        "HealthCheckProtocol": "TCP",
        "HealthyThresholdCount": 3,
        "UnhealthyThresholdCount": 3,
        "Port": 80,
        "Protocol": "TCP",
        "VpcId": {
          "Ref": "VPC"
        }
      }
    },
    "TargetGroup9001": {
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
      "Properties": {
        "Name": "nsolid-console-9001",
        "HealthCheckIntervalSeconds": 10,
        "HealthCheckPort": 9001,
        "HealthCheckProtocol": "TCP",
        "HealthyThresholdCount": 3,
        "UnhealthyThresholdCount": 3,
        "Port": 9001,
        "Protocol": "TCP",
        "VpcId": {
          "Ref": "VPC"
        }
      }
    },
    "TargetGroup9002": {
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
      "Properties": {
        "Name": "nsolid-console-9002",
        "HealthCheckIntervalSeconds": 10,
        "HealthCheckPort": 9002,
        "HealthCheckProtocol": "TCP",
        "HealthyThresholdCount": 3,
        "UnhealthyThresholdCount": 3,
        "Port": 9002,
        "Protocol": "TCP",
        "VpcId": {
          "Ref": "VPC"
        }
      }
    },
    "TargetGroup9003": {
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
      "Properties": {
        "Name": "nsolid-console-9003",
        "HealthCheckIntervalSeconds": 10,
        "HealthCheckPort": 9003,
        "HealthCheckProtocol": "TCP",
        "HealthyThresholdCount": 3,
        "UnhealthyThresholdCount": 3,
        "Port": 9003,
        "Protocol": "TCP",
        "VpcId": {
          "Ref": "VPC"
        }
      }
    },
    "Listener80": {
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
      "Properties": {
        "DefaultActions": [
          {
            "TargetGroupArn": {
              "Ref": "TargetGroup80"
            },
            "Type": "forward"
          }
        ],
        "LoadBalancerArn": {
          "Ref": "LoadBalancer"
        },
        "Port": 80,
        "Protocol": "TCP"
      }
    },
    "Listener9001": {
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
      "Properties": {
        "DefaultActions": [
          {
            "TargetGroupArn": {
              "Ref": "TargetGroup9001"
            },
            "Type": "forward"
          }
        ],
        "LoadBalancerArn": {
          "Ref": "LoadBalancer"
        },
        "Port": 9001,
        "Protocol": "TCP"
      }
    },
    "Listener9002": {
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
      "Properties": {
        "DefaultActions": [
          {
            "TargetGroupArn": {
              "Ref": "TargetGroup9002"
            },
            "Type": "forward"
          }
        ],
        "LoadBalancerArn": {
          "Ref": "LoadBalancer"
        },
        "Port": 9002,
        "Protocol": "TCP"
      }
    },
    "Listener9003": {
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
      "Properties": {
        "DefaultActions": [
          {
            "TargetGroupArn": {
              "Ref": "TargetGroup9003"
            },
            "Type": "forward"
          }
        ],
        "LoadBalancerArn": {
          "Ref": "LoadBalancer"
        },
        "Port": 9003,
        "Protocol": "TCP"
      }
    },
    "AutoScalingGroup": {
      "Type": "AWS::AutoScaling::AutoScalingGroup",
      "DependsOn": [
        "TargetGroup80",
        "TargetGroup9001",
        "TargetGroup9002",
        "TargetGroup9003"
      ],
      "Properties": {
        "VPCZoneIdentifier": {
          "Ref": "LoadBalancerSubnets"
        },
        "TargetGroupARNs": [
          {
            "Ref": "TargetGroup80"
          },
          {
            "Ref": "TargetGroup9001"
          },
          {
            "Ref": "TargetGroup9002"
          },
          {
            "Ref": "TargetGroup9003"
          }
        ],
        "LaunchConfigurationName": {
          "Ref": "ConsoleInstance"
        },
        "MinSize": "1",
        "MaxSize": "1",
        "DesiredCapacity": "1",
        "Tags": [
          {
            "Key": "Name",
            "Value": "N|Solid-Console",
            "PropagateAtLaunch": "True"
          }
        ]
      }
    },
    "ConsoleInstance": {
      "Type": "AWS::AutoScaling::LaunchConfiguration",
      "Properties": {
        "BlockDeviceMappings": [
          {
            "DeviceName": "/dev/sda1",
            "Ebs": {
              "VolumeSize": "50"
            }
          }
        ],
        "ImageId": {
          "Fn::FindInMap": [
            "ConsoleAMI",
            {
              "Ref": "AWS::Region"
            },
            "AMI"
          ]
        },
        "SecurityGroups": [
          {
            "Ref": "ConsoleSecurityGroup"
          }
        ],
        "InstanceType": "m5.large",
        "KeyName": {
          "Ref": "SSHKey"
        }
      }
    }
  },
  "Outputs": {
    "ConsoleURL": {
      "Description": "DNS Name of Load Balancer",
      "Export": {
        "Name": "nsolid-console-url"
      },
      "Value": {
        "Fn::GetAtt": [
          "LoadBalancer",
          "DNSName"
        ]
      }
    }
  }
}
